force-app/main/default/objects/NI_Pager_Bonus__c/NI_Pager_Bonus__c.object-meta.xml
<CustomObject>
    <description>Used to submit pager bonus records</description>
    <label>NI Pager Bonus</label>
    <nameField>
        <displayFormat>PB-{00000}</displayFormat>
        <label>Pager Bonus Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI Pager Bonus</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>