force-app/main/default/objects/NI_Pager_Bonus__c/fields/Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Amount__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Amount of the Bonus</description>
    <inlineHelpText>Amount of the Bonus</inlineHelpText>
    <label>Bonus Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>