force-app/main/default/objects/NI_Pager_Bonus__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The employee who should receive the pager bonus.  This field will be automatically updated with the Owner of the record if it is left blank when the record is created.</description>
    <inlineHelpText>The employee who should receive the pager bonus.  This field will be automatically updated with the Owner of the record if it is left blank when the record is created.</inlineHelpText>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NI_Pager_Bonus</relationshipName>
    <type>Lookup</type>
</CustomField>