force-app/main/default/objects/NI_Pager_Bonus__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically set to the Manager of the Employee Name user record when the record is created or the Employee Name changes.</description>
    <inlineHelpText>This field is automatically set to the Manager of the &quot;Employee Name&quot; user record when the record is created or the Employee Name changes.</inlineHelpText>
    <label>Final Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NI_Pager_Bonus_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>