force-app/main/default/objects/NI_Pager_Bonus__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>NICC-</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please describe any anomaly&apos;s in the standby shift.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>