force-app/main/default/objects/NI_Pager_Bonus__c/fields/Pager_Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>Pager_Week_Ending__c</fullName>
    <description>The day of the week that the pager week ends</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The day of the week that the pager week ends</inlineHelpText>
    <label>Pager Week Ending</label>
    <required>true</required>
    <type>Date</type>
</CustomField>