force-app/main/default/objects/NI_Pager_Bonus__c/fields/Standby_Pay__c.field-meta.xml
<CustomField>
    <fullName>Standby_Pay__c</fullName>
    <description>Created for Breda Office. Requested from Jan-Willem van Kampem. NICC-</description>
    <formula>Standby_Hours__c  * 3.47</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This box shows the total amount that will be paid for the standby shift. The number of scheduled hours are multiplied by the hourly amount of €3.47.</inlineHelpText>
    <label>Standby Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>