force-app/main/default/objects/NI_Pager_Bonus__c/fields/Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>Worked_Hours__c</fullName>
    <description>Created for Breda Office. Requested from Jan-Willem van Kampem. NICC-</description>
    <inlineHelpText>This field reflects the total of the actual time spent in hours on escalations during this entire shift (rounded by half hour).</inlineHelpText>
    <label>Worked Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>