force-app/main/default/objects/NI_Pager_Bonus__c/recordTypes/Breda_Office_Pager_Bonus.recordType-meta.xml
<RecordType>
    <fullName>Breda_Office_Pager_Bonus</fullName>
    <active>true</active>
    <description>NICC -</description>
    <label>Breda Office Pager Bonus</label>
</RecordType>