force-app/main/default/objects/NI_Pager_Bonus__c/recordTypes/CRS_Pager_Bonus.recordType-meta.xml
<RecordType>
    <fullName>CRS_Pager_Bonus</fullName>
    <active>true</active>
    <description>Used for CRS IHG department pager bonus. Salesforce.com NICC - 022719</description>
    <label>CRS Pager Bonus</label>
</RecordType>