force-app/main/default/objects/NI_Pager_Bonus__c/recordTypes/IT_Pager_Bonus.recordType-meta.xml
<RecordType>
    <fullName>IT_Pager_Bonus</fullName>
    <active>true</active>
    <description>Used for Newmarket&apos;s IT Department Pager Bonus</description>
    <label>IT Pager Bonus</label>
</RecordType>