force-app/main/default/objects/NI_Pager_Bonus__c/recordTypes/OnDemand_Pager_Bonus.recordType-meta.xml
<RecordType>
    <fullName>OnDemand_Pager_Bonus</fullName>
    <active>true</active>
    <description>Used for OnDemand Pager Bonus records</description>
    <label>OnDemand Pager Bonus</label>
</RecordType>