force-app/main/default/objects/NI_Pager_Bonus__c/recordTypes/Support_Pager_Bonus.recordType-meta.xml
<RecordType>
    <fullName>Support_Pager_Bonus</fullName>
    <active>true</active>
    <description>Used for the Support Department</description>
    <label>Support Pager Bonus</label>
</RecordType>