force-app/main/default/objects/NI_Pager_Bonus__c/listViews/Breda_Office_Pager_Bonus.listView-meta.xml
<ListView>
    <fullName>Breda_Office_Pager_Bonus</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Pager_Bonus__c.Breda_Office_Pager_Bonus</value>
    </filters>
    <label>Breda Office Pager Bonus</label>
</ListView>