force-app/main/default/objects/NI_Pager_Bonus__c/listViews/Breda_Officer_Pager_Bonus_Approved.listView-meta.xml
<ListView>
    <fullName>Breda_Officer_Pager_Bonus_Approved</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Pager_Bonus__c.Breda_Office_Pager_Bonus</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Breda Officer Pager Bonus - Approved</label>
</ListView>