force-app/main/default/objects/NI_Pager_Bonus__c/listViews/IT_Pager_Bonus_Approved.listView-meta.xml
<ListView>
    <fullName>IT_Pager_Bonus_Approved</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>ADP_Record_Number__c</columns>
    <columns>Bonus_Amount__c</columns>
    <columns>Pager_Week_Ending__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Pager_Bonus__c.IT_Pager_Bonus</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>IT Pager Bonus - Approved</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>