force-app/main/default/objects/NI_Pager_Bonus__c/listViews/IT_Pager_Bonus_Records.listView-meta.xml
<ListView>
    <fullName>IT_Pager_Bonus_Records</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Bonus_Amount__c</columns>
    <columns>Final_Approver__c</columns>
    <columns>Status__c</columns>
    <columns>Pager_Week_Ending__c</columns>
    <columns>ADP_Record_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Pager_Bonus__c.IT_Pager_Bonus</value>
    </filters>
    <label>IT Pager Bonus Records</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>