force-app/main/default/objects/NI_Pager_Bonus__c/listViews/My_Pager_Bonus_Records.listView-meta.xml
<ListView>
    <fullName>My_Pager_Bonus_Records</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Pager_Week_Ending__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Time_Submitted_to_Payroll__c</columns>
    <columns>ADP_Record_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Pager Bonus Records</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>