force-app/main/default/objects/NI_Pager_Bonus__c/listViews/Support_Pager_Bonus_Approved.listView-meta.xml
<ListView>
    <fullName>Support_Pager_Bonus_Approved</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>ADP_Record_Number__c</columns>
    <columns>Date_Time_Submitted_to_Payroll__c</columns>
    <columns>Pager_Type__c</columns>
    <columns>Pager_Week_Beginning__c</columns>
    <columns>Pager_Week_Ending__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Pager_Bonus__c.Support_Pager_Bonus</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Support Pager Bonuses - Approved</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>